enhancement: use avif images to reduce file size
AVIF is a new file format, supported by all major
browsers by now [1] that has way better compression
than other image formats. It is recommended to be
used to reduce the size of transmitted data during
page load.

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -125,7 +125,7 @@ html(lang='de')
                 .row.gx-5.align-items-center
                     .col-lg-6.order-lg-2
                         .p-xl-5.p-2
-                            img.img-fluid.rounded-circle(src='assets/img/3.jpg', alt='...')
+                            img.img-fluid.rounded-circle(src='assets/img/3.avif', alt='...')
                     .col-lg-6.order-lg-1
                         .p-xl-5.p-2
                             h2.display-4 Veranstaltungen
@@ -200,7 +200,7 @@ html(lang='de')
                 .row.gx-5.align-items-center
                     .col-lg-6.order-lg-1
                         .p-xl-5.p-2
-                            img.img-fluid.rounded-circle(src='assets/img/4.jpg', alt='...')
+                            img.img-fluid.rounded-circle(src='assets/img/4.avif', alt='...')
                     .col-lg-6.order-lg-2
                         .p-xl-5.p-2
                             h2.display-4 Kontakt
@@ -247,7 +247,7 @@ html(lang='de')
                 .row.gx-5.align-items-center
                     .col-lg-6.order-lg-2
                         .p-xl-5.p-2
-                            img.img-fluid.rounded-circle(src='assets/img/5.jpg', alt='...')
+                            img.img-fluid.rounded-circle(src='assets/img/5.avif', alt='...')
                     .col-lg-6.order-lg-1
                         .p-xl-5.p-2
                             h2.display-4 Ressourcen
@@ -321,7 +321,7 @@ html(lang='de')
                                 .col
                                     .card.h-100
                                         .card-img-container
-                                            img.w-75(src='assets/img/weyher_wuerfel.png', alt='Weyher Würfel Spieletreff')
+                                            img.w-75(src='assets/img/weyher_wuerfel.avif', alt='Weyher Würfel Spieletreff')
                                         .card-body
                                             .card-text
                                                 | Der Weyher Würfel Spieletreff bietet einen offenen Raum für alle Spieleinteressierten.
